mission service extended for fetching geometry coordinates from osm
